vault/manifests/oauth2-proxy.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: vault-oauth
  namespace: vault
spec:
  forwardAuth:
    address: "http://oauth2-proxy.vault.svc.cluster.local:4180/"
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  namespace: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
      - name: oauth2-proxy
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.6.0
        args:
          - --provider=keycloak-oidc
          - --oidc-issuer-url=https://keycloak.fluffy.lst/realms/Nutty
          - --client-id=vault
          - --client-secret=CoL7b9nycxVawOHh0fg7lm6o7Np7qxTc
          - --cookie-secret=8LGawUNBwrLzmfu8MlmRk5H0n12ZiuIjBCNJLdus7Xg=
          - --email-domain=*
          - --http-address=0.0.0.0:4180
          - --redirect-url=https://vault.fluffy.lst/oauth2/callback
          - --cookie-secure=true
          - --ssl-insecure-skip-verify=true
          - --insecure-oidc-allow-unverified-email=true
          - --user-id-claim=preferred_username
          - --oidc-email-claim=preferred_username
          - --upstream=static://200
          - --skip-provider-button=true
        ports:
        - containerPort: 4180
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: vault
spec:
  ports:
  - port: 4180
    targetPort: 4180
    name: http
  selector:
    app: oauth2-proxy
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy-ingress
  namespace: vault
  annotations:
    cert-manager.io/cluster-issuer: step-ca-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - vault.fluffy.lst
      secretName: vault-tls
  rules:
    - host: vault.fluffy.lst
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 4180
